# LameToMP3

app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/one/: com_swmofang_lametomp3_MP3Recorder.c  com_swmofang_lametomp3_MP3Recorder.h
app/src/main/cpp/one/libmp3lame/: fft.c
app/src/main/java/com/swmofang/lametomp3/: MP3Recorder.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
